--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,87 @@
 /* Work Sans Font from google fonts */
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+/* share style */
 *{
   font-family: "Work Sans", sans-serif;
 
+}
+.button-primary{
+    border-radius: 8px;
+    background: #FF900E;
+    padding: 20px 25px;
+    border: 0;
+    color: #FFF;
+    text-align: center;
+    font-family: Work Sans;
+    font-size: 1.2rem;
+    font-style: normal;
+    font-weight: 600;
+     cursor: pointer;
+}
+/* css style */
+header{
+    background: rgba(255, 144, 14, 0.10);
+    padding: 40px 240px;
+}
+nav{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+nav>ul{
+    display: flex;
+}
+ul>li{
+    list-style-type: none;
+    padding-right: 20px;
+    font-weight: 500;
+    font-size: 1rem;
+}
+ul>li>a{
+    text-decoration: none;
+    color: #424242;
+}
+.nav-title{
+    color: #131313;
+    font-size: 2.8rem;
+    font-weight: 700;
+
+}
+.banner{
+
+}
+.banner_top{
+    width: 862px;
+}
+.banner-title{
+    color: #131313;
+    text-align: center;
+    font-family: Work Sans;
+    font-size: 4rem;
+    font-weight: 700;
+}
+.banner-description{
+    color: #727272;
+    font-family: Work Sans;
+    font-size: 1rem;
+
+    font-weight: 400;
+}
+.banner-image{
+    width: 100%;
+}
+.banner_btn{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 20px;
+}
+/* Media Query */
+@media screen and (max-width:576px) {
+    header{
+        padding: 20px;
+    }
+    nav{
+        flex-direction: column;
+    }
 }
