--- a/style/style.css
+++ b/style/style.css
@@ -3,25 +3,25 @@
 /* share style */
 *{
   font-family: "Work Sans", sans-serif;
-
+  margin: 0;
+  padding: 0;
 }
-.button-primary{
+.btn-primary{
     border-radius: 8px;
     background: #FF900E;
-    padding: 20px 25px;
     border: 0;
     color: #FFF;
     text-align: center;
     font-family: Work Sans;
-    font-size: 1.2rem;
+    font-size: 1.25rem;
     font-style: normal;
     font-weight: 600;
-     cursor: pointer;
+    padding: 20px 25px;
+    margin: 20px;
 }
-/* css style */
 header{
-    background: rgba(255, 144, 14, 0.10);
-    padding: 40px 240px;
+    background-color: rgba(255, 144, 14, 0.10);
+    padding: 45px 240px;
 }
 nav{
     display: flex;
@@ -31,94 +31,108 @@ nav{
 nav>ul{
     display: flex;
 }
-ul>li{
-    list-style-type: none;
+ul li{
     padding-right: 20px;
+    list-style-type: none;
+    font-family: Work Sans;
+    font-size: 1.2rem;
+    font-style: normal;
     font-weight: 500;
-    font-size: 1rem;
 }
-ul>li>a{
+ul li a{
     text-decoration: none;
     color: #424242;
 }
 .nav-title{
-    color: #131313;
+    color:#131313;
+    font-family: Work Sans;
     font-size: 2.8rem;
+    font-style: normal;
     font-weight: 700;
-
 }
-.banner{
-
-}
-.banner_top{
-    width: 862px;
+.banner-content{
+    width: 860px;
+    margin: 0 auto;
+    text-align: center;
 }
 .banner-title{
     color: #131313;
-    text-align: center;
     font-family: Work Sans;
-    font-size: 4rem;
+    font-size: 64px;
+    font-style: normal;
     font-weight: 700;
 }
 .banner-description{
     color: #727272;
     font-family: Work Sans;
-    font-size: 1rem;
-
+    font-size: 16px;
+    font-style: normal;
     font-weight: 400;
 }
-.banner-image{
+.banner img{
     width: 100%;
 }
-.banner_btn{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 20px;
-}
-/* main section */
+/* Main Css */
 main{
-    padding: 40px 240px;;
+    width: 1440px;
+    margin: 70px auto;
+ 
 }
-.feature{
+.team-section{
     display: flex;
+    padding: 45px 100px;
+    gap: 20px;
     align-items: center;
-    gap: 70px;
+
 }
-.team{
+.team-image{
     display: grid;
     grid-template-columns: repeat(2,1fr);
-    gap: 24px;
+    gap: 10px;
+}
+.team-image img{
+    width: 100%;
 
 }
-.team img{
-    width: 100%;
+.team-content{
+    padding-left: 70px;
+    padding-right: 70px;
 }
-.team-title{
-    width: 468px;
+.team-description{
+
     color: #727272;
     font-family: Work Sans;
-    font-size: 2.8rem;
-    font-style: normal;
-    font-weight: 500;
-}
-.team-discription{
-    width: 537px;
-    color:#727272;
-    font-family: Work Sans;
-    font-size: 1rem;
+    font-size: 16px;
     font-style: normal;
     font-weight: 400;
 }
-/* Media Query */
+/* Responsive Media */
 @media screen and (max-width:576px) {
     header{
         padding: 20px;
     }
-    nav, .feature{
+    nav{
         flex-direction: column;
     }
-    .team{
+    .team-section{
+        flex-direction: column;
+    }
+    .team-image{
         grid-template-columns: 1fr;
     }
+    .team-content{
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+}
+/* Tablet or Medium Device */
+@media screen and (min-width:577px) and (max-width:992px) {
+    header{
+        padding: 50px;
+    }
+    nav{
+        flex-direction: column;
+    }
+
+
 }
